--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -152,7 +152,7 @@ services:
       - ../dags:/app/dags
     ports:
       - "8000:8000"
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload --reload-exclude dags/*
     restart: always
 
   frontend:
